<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/accent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/header_background"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toTopOf="parent">


<!--                <ImageView-->
<!--                    android:id="@+id/imgMenu"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginTop="24dp"-->
<!--                    android:contentDescription="menu"-->
<!--                    android:src="@drawable/ic_menu"-->
<!--                    app:layout_constraintEnd_toStartOf="@+id/linearLayout1"-->
<!--                    app:layout_constraintHorizontal_bias="0.5"-->
<!--                    app:layout_constraintHorizontal_chainStyle="spread"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    app:tint="@color/white" />-->

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/white_rectangle_background"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toStartOf="@+id/ivQr"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <EditText
                        android:id="@+id/edSingleLottery"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="กรอกเลข 6 หลัก"
                        android:gravity="center"
                        android:maxLength="6"
                        android:imeOptions="actionSearch"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <ImageView
                        android:id="@+id/tvClick"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/search_icon_background"
                        android:padding="6dp"
                        android:src="@drawable/ic_search"
                        app:tint="@color/white" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivQr"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_qrcode"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout1"
                    app:layout_constraintEnd_toEndOf="parent" />

                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/icon_small_v1"
                        android:paddingBottom="0dp"/>

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:paddingBottom="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"

                        />
                </LinearLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutHeader">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="22dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <fragment
                        android:id="@+id/fm1"
                        android:name="com.maicakapo.thailotto2021_1.ui.fragment.ShowLotteryResultFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>