...
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.maicakapo.thailotto2021_1.ui.fragment.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_qrCodeFragment"
            app:destination="@id/qrCodeFragment"
            app:popUpTo="@id/homeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_checkingResultFragment"
            app:destination="@id/checkingResultFragment"
            app:popUpTo="@id/homeFragment" />
...
